force-app/main/default/objects/Instagram_Api_Details__c/fields/accessToken__c.field-meta.xml
<CustomField>
    <fullName>accessToken__c</fullName>
    <label>accessToken</label>
    <type>TextArea</type>
</CustomField>