force-app/main/default/objects/Instagram_Api_Details__c/fields/businessUserId__c.field-meta.xml
<CustomField>
    <fullName>businessUserId__c</fullName>
    <label>businessUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>