force-app/main/default/objects/Instagram_Api_Details__c/fields/CLIENT_ID__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_ID__c</fullName>
    <label>CLIENT_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>