force-app/main/default/objects/Instagram_Api_Details__c/fields/CLIENT_SECRET__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_SECRET__c</fullName>
    <label>CLIENT_SECRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>