force-app/main/default/objects/Instagram_Api_Details__c/fields/HashTag__c.field-meta.xml
<CustomField>
    <fullName>HashTag__c</fullName>
    <label>HashTag(#)</label>
    <type>TextArea</type>
</CustomField>