force-app/main/default/objects/Instagram_Api_Details__c/fields/Mention__c.field-meta.xml
<CustomField>
    <fullName>Mention__c</fullName>
    <label>Mention(@)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>